[gd_scene load_steps=9 format=4 uid="uid://dpk0loj7y6sj3"]

[ext_resource type="PackedScene" uid="uid://doix4tmk08j2l" path="res://Scenes/characters/player.tscn" id="1_7t06c"]
[ext_resource type="Script" uid="uid://d1aoemn1hr250" path="res://Scripts/Levels/test_level.gd" id="1_b07c4"]
[ext_resource type="Texture2D" uid="uid://cvm2baoioe7ga" path="res://Assets/tile/wall.png" id="2_npfmg"]
[ext_resource type="PackedScene" uid="uid://cj8rug5ml2gcv" path="res://Scenes/characters/Enemies/normal_enemy.tscn" id="3_2ytpj"]
[ext_resource type="PackedScene" uid="uid://0wcttjmqkm8d" path="res://Scenes/characters/Enemies/Special_enemy.tscn" id="4_db73o"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_k8g1k"]
texture = ExtResource("2_npfmg")
texture_region_size = Vector2i(40, 40)
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-20, -20, 20, -20, 20, 20, -20, 20)

[sub_resource type="TileSet" id="TileSet_x4x4f"]
tile_size = Vector2i(40, 40)
physics_layer_0/collision_layer = 16
physics_layer_0/collision_mask = 6
sources/0 = SubResource("TileSetAtlasSource_k8g1k")

[sub_resource type="NavigationPolygon" id="NavigationPolygon_npfmg"]
vertices = PackedVector2Array(384.1875, 462.21875, 376.21875, 831.5469, 375.10938, 831.5078, 266.3672, 825.8203, 258.95313, 620.5078, 259.89844, 542.1172, 926.8125, 363.5, 927.14844, 351.21094, 927.8906, 363.53125, 1140.9531, 381.22656, 1141, 413.96875, 1141, 432.79688, 1139.4297, 469, 1132.6406, 469, 1102, 465.71094, 1102, 338.02344, 1137.2266, 223, 1225.2188, 384.39063, 1297.5391, 373.3828, 1383.1797, 378.64844, 1378.7188, 417.1328, 1390.2891, 820.9219, 1418.1563, 140.35156, 1423.1172, 538.9375, 1423.0391, 623, 1422.0078, 853.85156, 1379.1563, 139.92969, 930.27344, 727, 1016.9297, 779.7969, 622.9375, 772.1797, 836.27344, 727, 661.8203, 138.99219, 669.1797, 542, 619.72656, 501.65625, 616.35156, 450.90625, 1016.0625, 652.0781, 1010.2031, 652.1406, 1017.72656, 366.64063, 927.9922, 642.75, 613.52344, 541.21875, 621.9531, 582.15625, 742.1328, 542, 833.71875, 635.34375, 1537.1094, 930.6094, 1480.5391, 934.22656, 1481.0625, 930.4375, 1026.7734, 329.92188, 927.3203, 345.28125, 929.28125, 276.2578, 462.10156, 140.65625, 459.90625, 377.54688, 428.07813, 452.78125, 416.1328, 379.59375, 1220.0625, 139.71875, 1308.7031, 139.84375, 1497.2734, 623, 1541.1172, 619.4219, 1490.9766, 857.84375, 835.25, 360.3203, 1226.8438, 934.8203, 1378, 860.6406, 1099.9688, 854.1172, 1099.0234, 465.54688, 1134.5938, 500.9375, 1135.8438, 536.84375, 1138.4375, 852.3828, 1140.7188, 937.8828, 859, 934.8906, 1088.8672, 856, 58.703125, 935, 55.320313, 826, 59.796875, 826, 181.00781, 852.8594, 1588.7891, 539.9297, 1587.1875, 617.40625, 859, 986.89844, 776.72656, 986.0781, 769.71875, 935, 11.71875, 462.9375, 9.2734375, 374.78906, 58.820313, 373.8125, 182, 462.04688, 182, 149.88281, 64.8125, 58.078125, 767.40625, 64.07031, 245.50781, 144, 263.9297, 143.89063, 56.859375, 619.21094, 10.09375, 618.21094, 10.890625, 539.1172, 182.04688, 616.46094, 1140.8438, 852.2969, 1535.8516, 379.6172, 1587.8906, 381.60938, 1587.1016, 453.1797, 1500.8672, 454.8125, 1496.8672, 135.35156, 1540.8281, 66.92969, 869.8203, 62.953125, 1378, 821.52344, 1304.0313, 863.3828, 1220.8516, 538.14844, 1303.0234, 501.9375, 465.14844, 859.5703, 532.71875, 859.0625, 376.42188, 863.4297, 259.95313, 825.4922, 428.34375, 456.32813, 384, 378.7422, 260.21094, 859.75, 859.78906, 13.828125, 776.3828, 12.171875, 738.1328, 223, 831.5469, 273.72656, 540.27344, 580.84375, 460.15625, 537.2578, 384, 143.25781)
polygons = Array[PackedInt32Array]([PackedInt32Array(0, 1, 2, 3, 4, 5), PackedInt32Array(6, 7, 8), PackedInt32Array(9, 10, 11, 12, 13, 14, 15, 16), PackedInt32Array(17, 18, 19, 20, 10), PackedInt32Array(21, 20, 19, 22, 23, 24, 25), PackedInt32Array(22, 19, 26), PackedInt32Array(27, 28, 29, 30), PackedInt32Array(31, 32, 33, 34), PackedInt32Array(35, 28, 27, 36), PackedInt32Array(37, 36, 27, 38, 8), PackedInt32Array(39, 33, 32, 40), PackedInt32Array(41, 42, 30, 29, 40, 32), PackedInt32Array(43, 44, 45), PackedInt32Array(46, 47, 48, 16), PackedInt32Array(49, 31, 34, 50), PackedInt32Array(50, 34, 51, 52), PackedInt32Array(18, 17, 53, 54), PackedInt32Array(55, 56, 43, 57), PackedInt32Array(57, 43, 45, 25), PackedInt32Array(8, 38, 42, 6), PackedInt32Array(58, 6, 42, 41), PackedInt32Array(25, 45, 59, 60), PackedInt32Array(61, 62, 14, 13, 63, 64, 65), PackedInt32Array(61, 65, 66, 67, 68), PackedInt32Array(69, 70, 71, 72), PackedInt32Array(23, 73, 74, 56), PackedInt32Array(23, 56, 55, 24), PackedInt32Array(9, 17, 10), PackedInt32Array(67, 75, 76, 77), PackedInt32Array(78, 79, 80, 81), PackedInt32Array(82, 81, 80, 83), PackedInt32Array(82, 83, 84, 85), PackedInt32Array(86, 85, 84), PackedInt32Array(87, 88, 89, 5, 90), PackedInt32Array(64, 91, 65), PackedInt32Array(92, 93, 94, 95), PackedInt32Array(92, 95, 96, 97), PackedInt32Array(98, 97, 96, 22, 26), PackedInt32Array(98, 26, 54, 53), PackedInt32Array(98, 53, 31), PackedInt32Array(60, 99, 21, 25), PackedInt32Array(100, 60, 59), PackedInt32Array(100, 59, 101, 102), PackedInt32Array(63, 102, 101, 64), PackedInt32Array(103, 104, 68, 67, 77, 69, 105), PackedInt32Array(3, 106, 4), PackedInt32Array(52, 51, 107, 0, 108), PackedInt32Array(3, 2, 105, 109), PackedInt32Array(110, 98, 31, 84), PackedInt32Array(84, 111, 110), PackedInt32Array(16, 15, 46), PackedInt32Array(112, 16, 48, 113), PackedInt32Array(41, 112, 113, 58), PackedInt32Array(39, 40, 114, 115), PackedInt32Array(103, 115, 114, 104), PackedInt32Array(109, 105, 69), PackedInt32Array(72, 109, 69), PackedInt32Array(90, 72, 71, 87), PackedInt32Array(4, 90, 5), PackedInt32Array(0, 5, 86, 108), PackedInt32Array(116, 108, 86), PackedInt32Array(116, 86, 84, 49), PackedInt32Array(84, 31, 49)])
outlines = Array[PackedVector2Array]([PackedVector2Array(-1, 365, 49, 364, 55, 48, 759, 54, 768, 2, 868, 4, 878, 53, 1551, 57, 1546, 370, 1598, 372, 1597, 463, 1491, 465, 1487, 146, 1424, 150, 672, 149, 679, 532, 612, 536, 607, 461, 406, 463, 407, 370, 450, 368, 452, 151, 392, 153, 246, 154, 192, 159, 192, 472, 2, 473), PackedVector2Array(254, 137, 394, 136, 394, 369, 432, 370, 439, 465, 394, 471, 386, 842, 250, 835, 249, 630, 192, 627, 191, 856, 50, 840, 47, 629, 0, 628, 1, 529, 250, 532), PackedVector2Array(45, 816, 187, 816, 183, 843, 252, 849, 260, 805, 384, 804, 386, 853, 455, 850, 450, 527, 605, 531, 616, 461, 670, 484, 670, 532, 732, 532, 728, 213, 1147, 213, 1151, 383, 1151, 433, 1149, 479, 1092, 479, 1092, 347, 1027, 340, 917, 357, 919, 286, 842, 284, 845, 354, 844, 645, 846, 717, 920, 717, 918, 643, 1026, 642, 1027, 790, 613, 782, 612, 592, 550, 591, 543, 849, 1088, 846, 1148, 836, 1151, 948, 869, 945, 869, 997, 768, 996, 761, 945, 49, 945), PackedVector2Array(826, 350, 1028, 357, 1020, 660, 829, 645), PackedVector2Array(1210, 137, 1319, 134, 1308, 364, 1373, 368, 1369, 130, 1428, 127, 1433, 529, 1599, 530, 1597, 627, 1551, 629, 1547, 940, 1469, 945, 1481, 857, 1487, 633, 1433, 633, 1432, 856, 1381, 846, 1369, 427, 1143, 424, 1135, 371, 1215, 374), PackedVector2Array(1089, 455, 1142, 458, 1144, 491, 1313, 492, 1314, 853, 1368, 851, 1368, 812, 1430, 809, 1425, 844, 1494, 848, 1507, 940, 1217, 945, 1211, 548, 1146, 547, 1151, 862, 1090, 864)])

[node name="Test_Level" type="Node2D"]
script = ExtResource("1_b07c4")

[node name="BackGround" type="Sprite2D" parent="."]

[node name="Enemies" type="Node2D" parent="."]

[node name="Bullets" type="Node2D" parent="."]

[node name="Player" parent="." instance=ExtResource("1_7t06c")]
position = Vector2(501, 272)

[node name="normal_enemy" parent="." instance=ExtResource("3_2ytpj")]
position = Vector2(993, 455)

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="Special_Enemy" parent="." instance=ExtResource("4_db73o")]
visible = false

[node name="Tilemap" type="Node2D" parent="."]

[node name="Ground" type="TileMapLayer" parent="Tilemap"]

[node name="Wall" type="TileMapLayer" parent="Tilemap"]
tile_map_data = PackedByteArray("AAAAAAAAAAAAAAAAAAABAAAAAAAAAAAAAAACAAAAAAAAAAAAAAADAAAAAAAAAAAAAAAEAAAAAAAAAAAAAAAFAAAAAAAAAAAAAAAGAAAAAAAAAAAAAAAHAAAAAAAAAAAAAAAIAAAAAAAAAAAAAAAJAAAAAAAAAAAAAAAKAAAAAAAAAAAAAAALAAAAAAAAAAAAAAAMAAAAAAAAAAAAAAANAAAAAAAAAAAAAAAAAAEAAAAAAAAAAAAAAAIAAAAAAAAAAAAAAAMAAAAAAAAAAAAAAAQAAAAAAAAAAAAAAAUAAAAAAAAAAAAAAAYAAAAAAAAAAAAAAAcAAAAAAAAAAAAAAAgAAAAAAAAAAAAAABAAAAAAAAAAAAAAABMAAAAAAAAAAAAAABIAAAAAAAAAAAAAABEAAAAAAAAAAAAAABQAAAAAAAAAAAAAABUAAAAAAAAAAAAAABYAAAAAAAAAAAAAABcAAAAAAAAAAAAAABgAAAAAAAAAAAABABgAAAAAAAAAAAACABgAAAAAAAAAAAADABgAAAAAAAAAAAAEABgAAAAAAAAAAAAFABgAAAAAAAAAAAAGABgAAAAAAAAAAAAHABgAAAAAAAAAAAAIABgAAAAAAAAAAAAJABgAAAAAAAAAAAAKABgAAAAAAAAAAAALABgAAAAAAAAAAAAMABgAAAAAAAAAAAANABgAAAAAAAAAAAAOABgAAAAAAAAAAAAPABgAAAAAAAAAAAAQABgAAAAAAAAAAAAOAAAAAAAAAAAAAAAPAAAAAAAAAAAAAAAXAAAAAAAAAAAAAAAYAAAAAAAAAAAAAAAZAAAAAAAAAAAAAAAaAAAAAAAAAAAAAAAbAAAAAAAAAAAAAAAcAAAAAAAAAAAAAAAdAAAAAAAAAAAAAAAeAAAAAAAAAAAAAAAfAAAAAAAAAAAAAAAgAAAAAAAAAAAAAAAhAAAAAAAAAAAAAAAiAAAAAAAAAAAAAAAjAAAAAAAAAAAAAAAkAAAAAAAAAAAAAAAlAAAAAAAAAAAAAAAmAAAAAAAAAAAAAAAnAAAAAAAAAAAAAAAnAAEAAAAAAAAAAAAnAAIAAAAAAAAAAAAnAAMAAAAAAAAAAAAnAAQAAAAAAAAAAAAnAAUAAAAAAAAAAAAnAAYAAAAAAAAAAAAnAAcAAAAAAAAAAAAnABAAAAAAAAAAAAAnABEAAAAAAAAAAAAnABIAAAAAAAAAAAAnABQAAAAAAAAAAAAnABMAAAAAAAAAAAAnABUAAAAAAAAAAAAnABYAAAAAAAAAAAAnABcAAAAAAAAAAAAnABgAAAAAAAAAAAAmABgAAAAAAAAAAAAlABgAAAAAAAAAAAAkABgAAAAAAAAAAAAjABgAAAAAAAAAAAAiABgAAAAAAAAAAAAhABgAAAAAAAAAAAAgABgAAAAAAAAAAAAfABgAAAAAAAAAAAAeABgAAAAAAAAAAAAdABgAAAAAAAAAAAAcABgAAAAAAAAAAAAbABgAAAAAAAAAAAAaABgAAAAAAAAAAAAZABgAAAAAAAAAAAAQAAAAAAAAAAAAAAARAAAAAAAAAAAAAAASAAAAAAAAAAAAAAARABgAAAAAAAAAAAASABgAAAAAAAAAAAAYABgAAAAAAAAAAAAXABgAAAAAAAAAAAAWAAAAAAAAAAAAAAAWABgAAAAAAAAAAAAAAAwAAAAAAAAAAAABAAwAAAAAAAAAAAACAAwAAAAAAAAAAAADAAwAAAAAAAAAAAAEAAwAAAAAAAAAAAAFAAwAAAAAAAAAAAAFAAsAAAAAAAAAAAAFAAoAAAAAAAAAAAAFAAkAAAAAAAAAAAAFAAgAAAAAAAAAAAAFAAcAAAAAAAAAAAAFAAYAAAAAAAAAAAAFAAUAAAAAAAAAAAAFAAQAAAAAAAAAAAAKAAQAAAAAAAAAAAAKAAUAAAAAAAAAAAAKAAYAAAAAAAAAAAAKAAcAAAAAAAAAAAAKAAgAAAAAAAAAAAAKAA4AAAAAAAAAAAAKAA8AAAAAAAAAAAAKABAAAAAAAAAAAAAKABEAAAAAAAAAAAAKABIAAAAAAAAAAAAKABMAAAAAAAAAAAAKABQAAAAAAAAAAAAFABAAAAAAAAAAAAAFABEAAAAAAAAAAAAFABIAAAAAAAAAAAAFABMAAAAAAAAAAAAFABQAAAAAAAAAAAAKAAwAAAAAAAAAAAAKAA0AAAAAAAAAAAALAAwAAAAAAAAAAAAMAAwAAAAAAAAAAAANAAwAAAAAAAAAAAAOAAwAAAAAAAAAAAARAAwAAAAAAAAAAAARAAsAAAAAAAAAAAARAAoAAAAAAAAAAAARAAkAAAAAAAAAAAARAAgAAAAAAAAAAAARAAcAAAAAAAAAAAARAAYAAAAAAAAAAAARAAQAAAAAAAAAAAARAAUAAAAAAAAAAAASAAQAAAAAAAAAAAATAAQAAAAAAAAAAAAUAAQAAAAAAAAAAAAVAAQAAAAAAAAAAAAWAAQAAAAAAAAAAAAXAAQAAAAAAAAAAAAYAAQAAAAAAAAAAAAZAAQAAAAAAAAAAAAaAAQAAAAAAAAAAAAbAAQAAAAAAAAAAAAcAAQAAAAAAAAAAAAdAAQAAAAAAAAAAAAdAAUAAAAAAAAAAAAdAAYAAAAAAAAAAAAdAAcAAAAAAAAAAAAdAAgAAAAAAAAAAAAVAAcAAAAAAAAAAAAVAAgAAAAAAAAAAAAWAAgAAAAAAAAAAAAWAAcAAAAAAAAAAAAVABAAAAAAAAAAAAAVABEAAAAAAAAAAAAWABEAAAAAAAAAAAAWABAAAAAAAAAAAAAOAA8AAAAAAAAAAAAOABAAAAAAAAAAAAAOABEAAAAAAAAAAAAOABIAAAAAAAAAAAAOABMAAAAAAAAAAAAOABQAAAAAAAAAAAAPABQAAAAAAAAAAAAQABQAAAAAAAAAAAAWABQAAAAAAAAAAAARABQAAAAAAAAAAAASABQAAAAAAAAAAAATABQAAAAAAAAAAAAUABQAAAAAAAAAAAAVABQAAAAAAAAAAAAXABQAAAAAAAAAAAAYABQAAAAAAAAAAAAZABQAAAAAAAAAAAAaABQAAAAAAAAAAAAaABMAAAAAAAAAAAAaABIAAAAAAAAAAAAaABEAAAAAAAAAAAAaABAAAAAAAAAAAAAaAA8AAAAAAAAAAAAaAA4AAAAAAAAAAAAaAA0AAAAAAAAAAAAaAAwAAAAAAAAAAAAaAAsAAAAAAAAAAAAaAAoAAAAAAAAAAAAaAAkAAAAAAAAAAAAdAAsAAAAAAAAAAAAeAAsAAAAAAAAAAAAfAAsAAAAAAAAAAAAgAAsAAAAAAAAAAAAhAAsAAAAAAAAAAAAhAAwAAAAAAAAAAAAhAA0AAAAAAAAAAAAhAA4AAAAAAAAAAAAhAA8AAAAAAAAAAAAhABAAAAAAAAAAAAAhABEAAAAAAAAAAAAdAA8AAAAAAAAAAAAdABAAAAAAAAAAAAAdABEAAAAAAAAAAAAdABIAAAAAAAAAAAAdABMAAAAAAAAAAAAdABQAAAAAAAAAAAAdABUAAAAAAAAAAAAdABYAAAAAAAAAAAAdABcAAAAAAAAAAAAhAAQAAAAAAAAAAAAhAAUAAAAAAAAAAAAhAAYAAAAAAAAAAAAhAAcAAAAAAAAAAAAhAAgAAAAAAAAAAAAdAA4AAAAAAAAAAAAkABAAAAAAAAAAAAAkABEAAAAAAAAAAAAkABIAAAAAAAAAAAAkABMAAAAAAAAAAAAhABIAAAAAAAAAAAAhABMAAAAAAAAAAAAkAAQAAAAAAAAAAAAkAAUAAAAAAAAAAAAkAAYAAAAAAAAAAAAkAAcAAAAAAAAAAAAkAAgAAAAAAAAAAAAkAAkAAAAAAAAAAAAkAAoAAAAAAAAAAAAkAAsAAAAAAAAAAAAkAAwAAAAAAAAAAAAlAAwAAAAAAAAAAAAmAAwAAAAAAAAAAAAnAAwAAAAAAAAAAAAnAAgAAAAAAAAAAAAkABQAAAAAAAAAAAAhABQAAAAAAAAAAAA=")
tile_set = SubResource("TileSet_x4x4f")

[node name="NavigationRegion2D" type="NavigationRegion2D" parent="."]
navigation_polygon = SubResource("NavigationPolygon_npfmg")

[connection signal="shoot_string" from="Player" to="." method="_on_player_shoot_string"]
[connection signal="timeout" from="SpawnTimer" to="." method="_on_spawn_timer_timeout"]
